5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4271/executions/1828_1644.log
== TEST (2019-06-12 14:47:39) 
-- CODE:
from numpy import *
vet = array(eval(input("Notas finais: ")))
vcont = 0
for i in range(size(vet)): 
	if (vet[i] >= 5)
		vcont = vcont + 1
print(vcont)
-- ERROR:
File "XXXX", line 5
    if (vet[i] >= 5)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:48:09) 
-- CODE:
from numpy import *
vet = array(eval(input("Notas finais: ")))
vcont = 0
for i in range(size(vet)): 
	if (vet[i] >= 5.0)
		vcont = vcont + 1
print(vcont)
-- ERROR:
File "XXXX", line 5
    if (vet[i] >= 5.0)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:48:39) 
-- CODE:
from numpy import *
vet = array(eval(input("Notas finais: ")))
vcont = 0
for i in range(size(vet)): 
	if (vet[i] >= 5.0)
		vcont = vcont + 1
print(vcont)
-- EXECUTION TIME:
0.881832
-- ERROR:
  File "/home/codebench/codes/1828/1644/main.py", line 5
    if (vet[i] >= 5.0)
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:48:58) 
-- CODE:
from numpy import *
vet = array(eval(input("Notas finais: ")))
vcont = 0
for i in range(size(vet)): 
	if (vet[i] >= 5.0):
		vcont = vcont + 1
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:49:34) 
-- CODE:
from numpy import *
vet = array(eval(input("Notas finais: ")))
vcont = 0
for i in range(size(vet)): 
	if (vet[i] >= 5.0):
		vcont = vcont + 1
print(vcont)
-- EXECUTION TIME:
0.934841
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
7
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
3
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:50:35) 
-- CODE:
from numpy import *
vet = array(eval(input("Notas finais: ")))
vcont = 0
for i in range(size(vet)): 
	if (vet[i] < 5.0):
		vcont = vcont + 1
print(vcont)
vet
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:55:12) 
-- CODE:
from numpy import *
vet = array(eval(input("Notas finais: ")))
vcont = 0
for i in range(size(vet)): 
	if (vet[i] < 5.0):
		vcont = vcont + 1
print(vcont)
vet = array(eval(input("valor dos indices: ")))
vcont = zeros(2, dtype=int)
for i in range(size(vet)):
	
-- ERROR:
File "XXXX", line 12
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:55:21) 
-- CODE:
from numpy import *
vet = array(eval(input("Notas finais: ")))
vcont = 0
for i in range(size(vet)): 
	if (vet[i] < 5.0):
		vcont = vcont + 1
print(vcont)
vet = array(eval(input("valor dos indices: ")))
vcont = zeros(2, dtype=int)
for i in range(size(vet)):
-- EXECUTION TIME:
0.935539
-- ERROR:
  File "/home/codebench/codes/1828/1644/main.py", line 11
    
                              ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:55:47) 
-- CODE:
from numpy import *
vet = array(eval(input("Notas finais: ")))
vcont = 0
for i in range(size(vet)): 
	if (vet[i] < 5.0):
		vcont = vcont + 1
print(vcont)
vet = array(eval(input("valor dos indices: ")))
vcont = zeros(2, dtype=int)
for i in range(size(vet)):
-- ERROR:
File "XXXX", line 11
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:55:59) 
-- CODE:
from numpy import *
vet = array(eval(input("Notas finais: ")))
vcont = 0
for i in range(size(vet)): 
	if (vet[i] < 5.0):
		vcont = vcont + 1
print(vcont)
vet = array(eval(input("valor dos indices: ")))
vcont = zeros(2, dtype=int)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 14:57:48) 
-- CODE:
from numpy import *
vet = array(eval(input("Notas finais: ")))
vcont = 0
for i in range(size(vet)): 
	if (vet[i] < 5.0):
		vcont = vcont + 1
print(vcont)
vet = array(eval(input("valor dos indices: ")))
vcont = zeros(2, dtype=int)
-- EXECUTION TIME:
0.97759
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1828/1644/main.py", line 8, in <module>
    vet = array(eval(input()))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 14:59:55) 
-- CODE:
from numpy import *
vet = array(eval(input("Notas finais: ")))
vcont = 0
for i in range(size(vet)): 
	if (vet[i] < 5.0):
		vcont = vcont + 1
print(vcont)
vcont = zeros(2, dtype=int)
for i in range(size(vet)):
-- ERROR:
File "XXXX", line 10
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:00:03) 
-- CODE:
from numpy import *
vet = array(eval(input("Notas finais: ")))
vcont = 0
for i in range(size(vet)): 
	if (vet[i] < 5.0):
		vcont = vcont + 1
print(vcont)
vcont = zeros(2, dtype=int)
for i in range(size(vet)):
-- ERROR:
File "XXXX", line 10
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:00:10) 
-- CODE:
from numpy import *
vet = array(eval(input("Notas finais: ")))
vcont = 0
for i in range(size(vet)): 
	if (vet[i] < 5.0):
		vcont = vcont + 1
print(vcont)
vcont = zeros(2, dtype=int)
for i in range(size(vet)):
-- ERROR:
File "XXXX", line 10
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:00:11) 
-- CODE:
from numpy import *
vet = array(eval(input("Notas finais: ")))
vcont = 0
for i in range(size(vet)): 
	if (vet[i] < 5.0):
		vcont = vcont + 1
print(vcont)
vcont = zeros(2, dtype=int)
for i in range(size(vet)):
-- EXECUTION TIME:
0.710621
-- ERROR:
  File "/home/codebench/codes/1828/1644/main.py", line 10
    
                              ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:00:11) 
-- CODE:
from numpy import *
vet = array(eval(input("Notas finais: ")))
vcont = 0
for i in range(size(vet)): 
	if (vet[i] < 5.0):
		vcont = vcont + 1
print(vcont)
vcont = zeros(2, dtype=int)
for i in range(size(vet)):
-- ERROR:
File "XXXX", line 10
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:00:16) 
-- CODE:
from numpy import *
vet = array(eval(input("Notas finais: ")))
vcont = 0
for i in range(size(vet)): 
	if (vet[i] < 5.0):
		vcont = vcont + 1
print(vcont)
vcont = zeros(2, dtype=int)
for i in range(size(vet)):
-- ERROR:
File "XXXX", line 10
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:00:21) 
-- CODE:
from numpy import *
vet = array(eval(input("Notas finais: ")))
vcont = 0
for i in range(size(vet)): 
	if (vet[i] < 5.0):
		vcont = vcont + 1
print(vcont)
vcont = zeros(2, dtype=int)
for i in range(size(vet)):
-- EXECUTION TIME:
0.893698
-- ERROR:
  File "/home/codebench/codes/1828/1644/main.py", line 10
    
                              ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:02:28) 
-- CODE:
from numpy import *
vet = array(eval(input("Notas finais: ")))
vcont = 0
for i in range(size(vet)): 
	if (vet[i] < 5.0):
		vcont = vcont + 1
print(vcont)
vcont = zeros(2, dtype=int)
for i in range(size(vet)):
	vcont[1] = vcont[1] + 1
	vcont[2] = vcont[2] + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:03:07) 
-- CODE:
from numpy import *
vet = array(eval(input("Notas finais: ")))
vcont = 0
for i in range(size(vet)): 
	if (vet[i] < 5.0):
		vcont = vcont + 1
print(vcont)
vcont = zeros(2, dtype=int)
for i in range(size(vet)):
	vcont[1] = vcont[1] + 1
	vcont[2] = vcont[2] + 1
-- EXECUTION TIME:
1.00308
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1828/1644/main.py", line 11, in <module>
    vcont[2] = vcont[2] + 1
IndexError: index 2 is out of bounds for axis 0 with size 2

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:05:12) 
-- CODE:
from numpy import *
vet = array(eval(input("Notas finais: ")))
vcont = 0
for i in range(size(vet)): 
	if (vet[i] < 5.0):
		vcont = vcont + 1
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:05:41) 
-- CODE:
from numpy import *
vet = array(eval(input("Notas finais: ")))
vcont = 0
for i in range(size(vet)): 
	if (vet[i] < 5.0):
		vcont = vcont + 1
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:09:10) 
-- CODE:
from numpy import *
vet = array(eval(input("Notas finais: ")))
vcont = 0
for i in range(size(vet)): 
	if (vet[i] < 5.0):
		vcont = vcont + 1
print(vcont)
vcont = zeros(2, dtype=int)
for i in range(size(vet)):
	if (vet[i] == [i])
	 vcont[0] = vcont[0] + 1
-- ERROR:
File "XXXX", line 10
    if (vet[i] == [i])
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:09:51) 
-- CODE:
from numpy import *
vet = array(eval(input("Notas finais: ")))
vcont = 0
for i in range(size(vet)): 
	if (vet[i] < 5.0):
		vcont = vcont + 1
print(vcont)
vcont = zeros(2, dtype=int)
for i in range(size(vet)):
-- ERROR:
File "XXXX", line 10
    
                              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:09:57) 
-- CODE:
from numpy import *
vet = array(eval(input("Notas finais: ")))
vcont = 0
for i in range(size(vet)): 
	if (vet[i] < 5.0):
		vcont = vcont + 1
print(vcont)
vcont = zeros(2, dtype=int)
for i in range(size(vet)):
-- EXECUTION TIME:
0.716748
-- ERROR:
  File "/home/codebench/codes/1828/1644/main.py", line 10
    
                              ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:12:26) 
-- CODE:
from numpy import *
vet = array(eval(input("Notas finais: ")))
vcont = 0
for i in range(size(vet)): 
	if (vet[i] < 5.0):
		vcont = vcont + 1
print(vcont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:26:22) 
-- CODE:
from numpy import *
vet = array(eval(input("Notas finais: ")))
vcont = 0
for i in range(size(vet)): 
	if (vet[i] < 5.0):
		vcont = vcont + 1
print(vcont)
for i in range([i])
-- ERROR:
File "XXXX", line 8
    for i in range([i])
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:26:40) 
-- CODE:
from numpy import *
vet = array(eval(input("Notas finais: ")))
vcont = 0
for i in range(size(vet)): 
	if (vet[i] < 5.0):
		vcont = vcont + 1
print(vcont)
for i in vet[i]
-- ERROR:
File "XXXX", line 8
    for i in vet[i]
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:26:43) 
-- CODE:
from numpy import *
vet = array(eval(input("Notas finais: ")))
vcont = 0
for i in range(size(vet)): 
	if (vet[i] < 5.0):
		vcont = vcont + 1
print(vcont)
for i in vet[i]
-- EXECUTION TIME:
0.843185
-- ERROR:
  File "/home/codebench/codes/1828/1644/main.py", line 8
    for i in vet[i]
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:41:17) 
-- CODE:
from numpy import *
vet = array(eval(input("Notas finais: ")))
vcont = 0
for i in range(size(vet)): 
	if (vet[i] < 5.0):
		vcont = vcont + 1
print(vcont)
i = 0
cont = 0
for i in vet:
	
-- ERROR:
File "XXXX", line 12
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:41:22) 
-- CODE:
from numpy import *
vet = array(eval(input("Notas finais: ")))
vcont = 0
for i in range(size(vet)): 
	if (vet[i] < 5.0):
		vcont = vcont + 1
print(vcont)
i = 0
cont = 0
for i in vet:
	
-- EXECUTION TIME:
0.793072
-- ERROR:
  File "/home/codebench/codes/1828/1644/main.py", line 12
    
     ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 15:42:22) 
-- CODE:
from numpy import *
vet = array(eval(input("Notas finais: ")))
vcont = 0
for i in range(size(vet)): 
	if (vet[i] < 5.0):
		vcont = vcont + 1
print(vcont)
i = 0
cont = 0
for i in vet:
	if (vet[i] == 1):
		cont = cont + 1
	print(cont)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:42:24) 
-- CODE:
from numpy import *
vet = array(eval(input("Notas finais: ")))
vcont = 0
for i in range(size(vet)): 
	if (vet[i] < 5.0):
		vcont = vcont + 1
print(vcont)
i = 0
cont = 0
for i in vet:
	if (vet[i] == 1):
		cont = cont + 1
	print(cont)
-- EXECUTION TIME:
1.1185
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1828/1644/main.py", line 11, in <module>
    if (vet[i] == 1):
IndexError: only integers, slices (`:`), ellipsis (`...`), numpy.newaxis (`None`) and integer or boolean arrays are valid indices

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 15:43:04) 
-- CODE:
from numpy import *
vet = array(eval(input("Notas finais: ")))
vcont = 0
for i in range(size(vet)): 
	if (vet[i] < 5.0):
		vcont = vcont + 1
print(vcont)
-- EXECUTION TIME:
1.17183
-- TEST CASE 1:
---- input:
[4.3,5.2,3.6,10,9.8,7.1,5,9.0,4.2,7.0,4.5]
---- correct output:
4
[ 0  2  8 10]
---- user output:
4
-- TEST CASE 2:
---- input:
[7.5,2.4,3.6,4,7.9,4.5,4.2,7.0,4.5]
---- correct output:
6
[1 2 3 5 6 8]
---- user output:
6
-- TEST CASE 3:
---- input:
[3.6,2.9,5,7,4.5,7.8,9.0]
---- correct output:
3
[0 1 4]
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
